--- a/for del.ipynb
+++ b/for del.ipynb
@@ -43,10 +43,15 @@
     {
       "cell_type": "markdown",
       "source": [
-        "hi **elham** please delet this notebook please\n",
+        "▫ **elham** please delet this notebook please\n",
         "\n",
         "1.   List item\n",
         "2.   List item\n",
+        "\n",
+        "*   List item\n",
+        "*   List item\n",
+        "\n",
+        "\n",
         "\n"
       ],
       "metadata": {
